--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.7"
-  }
+    "@types/node": "^20.11.22",
+    "prisma": "^5.10.2",
+    "tailwindcss": "^3.3.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
